welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: java.awt.Color does not take parameters
    if ( getCouleurSol()()!=Color.green){
                        ^